# just-fast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
src/: CMakeLists.txt  JustFastUi.cpp  JustFastUi.h  main.cpp  meson.build
src/libs/: CMakeLists.txt
src/libs/FileSystemOperations/: CMakeLists.txt  FileSystemOperations.cpp  FileSystemOperations.h
src/libs/JustFastUi/: CMakeLists.txt  JustFastUi.cpp  JustFastUi.h
